--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div>
-        <h1>Ты сегодня покормил кота???</h1>
+        <h1>Ты сегодня покормил кота?</h1>
         <div class="first eat">
             <div class="content-1">
                 <p>Сказочное заморское яство</p>
@@ -33,7 +33,7 @@
                 <h3>с фуа-гра</h3>
                 <p>10 порций <br>мыш в подарок</p>
             </div>
-            <p>извольте, пожалуйста<a href="#">купить нашу продукцию</a></p>
+            <p>извольте, пожалуйста <a href="#">купить нашу продукцию</a></p>
         </div>
     </div>
 </body>
