day 1 end. i created sceleton of this site

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
     <div>
         <h1>Ты сегодня покормил кота?</h1>
-        <div class="first eat">
-            <div class="content-1">
+        <div class="first_eat">
+            <div class="content-1 content">
                 <p>Сказочное заморское яство</p>
                 <h1>Нямушка</h1>
                 <h3>с фуа-гра</h3>
@@ -18,7 +18,7 @@
             <p>слыш <a href="#">купи</a></p>
         </div>
         <div class="second eat">
-            <div class="content-2">
+            <div class="content-2 content">
                 <p>Сказочное заморское яство</p>
                 <h1>Нямушка</h1>
                 <h3>с рыбой</h3>
@@ -27,7 +27,7 @@
             <p>слыш, пожалуйста<a href="#">купи</a></p>
         </div>
         <div class="third eat">
-            <div class="content-3">
+            <div class="content-3 content">
                 <p>Сказочное заморское яство</p>
                 <h1>Нямушка</h1>
                 <h3>с фуа-гра</h3>
