--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>хавчик для кошака</title>
 </head>
 <body>
-    <div>
+    <div class="allContent">
         <h1>Ты сегодня покормил кота?</h1>
         <div class="first_eat">
             <div class="content-1 content">
@@ -15,25 +15,25 @@
                 <h3>с фуа-гра</h3>
                 <p>10 порций <br>мыш в подарок</p>
             </div>
-            <p>слыш <a href="#">купи</a></p>
+            <p class="quastion">слыш <a href="#">купи</a></p>
         </div>
-        <div class="second eat">
+        <div class="second_eat">
             <div class="content-2 content">
                 <p>Сказочное заморское яство</p>
                 <h1>Нямушка</h1>
                 <h3>с рыбой</h3>
                 <p>40 порций <br>мыш дриссированная в подарок</p>
             </div>
-            <p>слыш, пожалуйста<a href="#">купи</a></p>
+            <p class="quastion">слыш, пожалуйста<a href="#">купи</a></p>
         </div>
-        <div class="third eat">
+        <div class="third_eat">
             <div class="content-3 content">
                 <p>Сказочное заморское яство</p>
                 <h1>Нямушка</h1>
                 <h3>с фуа-гра</h3>
                 <p>10 порций <br>мыш в подарок</p>
             </div>
-            <p>извольте, пожалуйста <a href="#">купить нашу продукцию</a></p>
+            <p class="quastion">извольте, пожалуйста <a href="#">купить нашу продукцию</a></p>
         </div>
     </div>
 </body>
