--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
     <title>хавчик для кошака</title>
 </head>
 <body>
+    <div class="page">
+        <h1 class="page-first-word">Ты сегодня покормил кота?</h1>
     <div class="allContent">
-        <h1>Ты сегодня покормил кота?</h1>
         <div class="first_eat">
             <div class="content-1 content">
-                <p>Сказочное заморское яство</p>
-                <h1>Нямушка</h1>
+                <p class="first_word">Сказочное заморское яство</p>
+                <h1 class="name">Нямушка</h1>
                 <h3>с фуа-гра</h3>
                 <p>10 порций <br>мыш в подарок</p>
             </div>
-            <p class="quastion">слыш <a href="#">купи</a></p>
+            <p class="quastion">слыш <a href="#" class="givMeYouMony">купи</a></p>
         </div>
         <div class="second_eat">
             <div class="content-2 content">
@@ -24,7 +25,7 @@
                 <h3>с рыбой</h3>
                 <p>40 порций <br>мыш дриссированная в подарок</p>
             </div>
-            <p class="quastion">слыш, пожалуйста<a href="#">купи</a></p>
+            <p class="quastion">слыш, пожалуйста<a href="#" class="givMeYouMony">купи</a></p>
         </div>
         <div class="third_eat">
             <div class="content-3 content">
@@ -33,8 +34,9 @@
                 <h3>с фуа-гра</h3>
                 <p>10 порций <br>мыш в подарок</p>
             </div>
-            <p class="quastion">извольте, пожалуйста <a href="#">купить нашу продукцию</a></p>
+            <p class="quastion">извольте, пожалуйста <a href="#" class="givMeYouMony">купить нашу продукцию</a></p>
         </div>
+    </div>
     </div>
 </body>
 </html>
