90% work is compleate

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="first_eat">
             <div class="content-1 content">
                 <p class="first_word">Сказочное заморское яство</p>
-                <h1 class="name">Нямушка</h1>
+                <p class="name">Нямушка</p>
                 <h3>с фуа-гра</h3>
                 <p>10 порций <br>мыш в подарок</p>
             </div>
@@ -20,21 +20,21 @@
         </div>
         <div class="second_eat">
             <div class="content-2 content">
-                <p>Сказочное заморское яство</p>
-                <h1>Нямушка</h1>
+                <p class="first_word">Сказочное заморское яство</p>
+                <p class="name">Нямушка</p>
                 <h3>с рыбой</h3>
                 <p>40 порций <br>мыш дриссированная в подарок</p>
             </div>
-            <p class="quastion">слыш, пожалуйста<a href="#" class="givMeYouMony">купи</a></p>
+            <p class="quastion">слыш, пожалуйста <a href="#" class="givMeYouMony">купи</a></p>
         </div>
         <div class="third_eat">
             <div class="content-3 content">
-                <p>Сказочное заморское яство</p>
-                <h1>Нямушка</h1>
-                <h3>с фуа-гра</h3>
+                <p class="first_word">Сказочное заморское яство</p>
+                <p class="name">Нямушка</p>
+                <h3>с курицей</h3>
                 <p>10 порций <br>мыш в подарок</p>
             </div>
-            <p class="quastion">извольте, пожалуйста <a href="#" class="givMeYouMony">купить нашу продукцию</a></p>
+            <p class="quastion">извольте пожалуйста<br><a href="#" class="givMeYouMony">купить нашу продукцию</a></p>
         </div>
     </div>
     </div>
