test commit filter is not working last commit

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <h3>с курицей</h3>
                 <p>10 порций <br>мыш в подарок</p>
             </div>
-            <p class="quastion">извольте пожалуйста<br><a href="#" class="givMeYouMony">купить нашу продукцию</a></p>
+            <p class="quastion filter">извольте пожалуйста<br><a href="#" class="givMeYouMony">купить нашу продукцию</a></p>
         </div>
     </div>
     </div>
