text visibl normal

--- a/index.html
+++ b/index.html
@@ -10,31 +10,37 @@
         <h1 class="page-first-word">Ты сегодня покормил кота?</h1>
     <div class="allContent">
         <div class="first_eat">
+            <a href="#">
             <div class="content-1 content">
                 <p class="first_word">Сказочное заморское яство</p>
                 <p class="name">Нямушка</p>
-                <h3>с фуа-гра</h3>
-                <p>10 порций <br>мыш в подарок</p>
+                <h3 class="food">с фуа-гра</h3>
+                <p class="portions">10 порций <br>мыш в подарок</p>
             </div>
-            <p class="quastion">слыш <a href="#" class="givMeYouMony">купи</a></p>
+            </a>
+            <p class="question">слыш <a href="#" class="giveMeYouMoney">купи</a></p>
         </div>
         <div class="second_eat">
+            <a href="#">
             <div class="content-2 content">
                 <p class="first_word">Сказочное заморское яство</p>
                 <p class="name">Нямушка</p>
-                <h3>с рыбой</h3>
-                <p>40 порций <br>мыш дриссированная в подарок</p>
+                <h3 class="food">с рыбой</h3>
+                <p class="portions">40 порций <br>мыш дриссированная в подарок</p>
             </div>
-            <p class="quastion">слыш, пожалуйста <a href="#" class="givMeYouMony">купи</a></p>
+            </a>
+            <p class="question">слыш, пожалуйста <a href="#" class="giveMeYouMoney">купи</a></p>
         </div>
         <div class="third_eat">
+            <a href="#">
             <div class="content-3 content">
                 <p class="first_word">Сказочное заморское яство</p>
                 <p class="name">Нямушка</p>
-                <h3>с курицей</h3>
-                <p>10 порций <br>мыш в подарок</p>
+                <h3 class="food">с курицей</h3>
+                <p class="portions">10 порций <br>мыш в подарок</p>
             </div>
-            <p class="quastion filter">извольте пожалуйста<br><a href="#" class="givMeYouMony">купить нашу продукцию</a></p>
+            </a>
+            <p class="question">извольте пожалуйста<br><a href="#" class="giveMeYouMoney">купить нашу продукцию</a></p>
         </div>
     </div>
     </div>
