test img in new div

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <p class="name">Нямушка</p>
                 <h3 class="food">с фуа-гра</h3>
                 <p class="portions">10 порций <br>мыш в подарок</p>
+                <div class="img"> retret</div>
             </div>
             </a>
             <p class="question">слыш <a href="#" class="giveMeYouMoney">купи</a></p>
