--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <p class="name">Нямушка</p>
                 <h3 class="food">с фуа-гра</h3>
                 <p class="portions">10 порций <br>мыш в подарок</p>
-                <div class="img"> retret</div>
+                <div class="img"></div>
             </div>
             </a>
             <p class="question">слыш <a href="#" class="giveMeYouMoney">купи</a></p>
@@ -28,6 +28,7 @@
                 <p class="name">Нямушка</p>
                 <h3 class="food">с рыбой</h3>
                 <p class="portions">40 порций <br>мыш дриссированная в подарок</p>
+                <div class="img"></div>
             </div>
             </a>
             <p class="question">слыш, пожалуйста <a href="#" class="giveMeYouMoney">купи</a></p>
@@ -39,9 +40,10 @@
                 <p class="name">Нямушка</p>
                 <h3 class="food">с курицей</h3>
                 <p class="portions">10 порций <br>мыш в подарок</p>
+                <div class="img"></div>
             </div>
             </a>
-            <p class="question">извольте пожалуйста<br><a href="#" class="giveMeYouMoney">купить нашу продукцию</a></p>
+            <p class="question">приносим изменения товар закончился<br>вы можете <a href="#" class="giveMeYouMoney">предзаказать нашу продукцию</a></p>
         </div>
     </div>
     </div>
