deleate filter add opacity

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <h3 class="food">с фуа-гра</h3>
                 <p class="portions">10 порций <br>мыш в подарок</p>
                 <div class="img"></div>
+                <div class="round">0,5<br>кг</div>
             </div>
             </a>
             <p class="question">слыш <a href="#" class="giveMeYouMoney">купи</a></p>
