round work normal

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <h3 class="food">с фуа-гра</h3>
                 <p class="portions">10 порций <br>мыш в подарок</p>
                 <div class="img"></div>
-                <div class="round">0,5<br>кг</div>
+                <div class="round"><div class="text-in-round">0,5<br>кг</div></div>
             </div>
             </a>
             <p class="question">слыш <a href="#" class="giveMeYouMoney">купи</a></p>
@@ -30,6 +30,7 @@
                 <h3 class="food">с рыбой</h3>
                 <p class="portions">40 порций <br>мыш дриссированная в подарок</p>
                 <div class="img"></div>
+                <div class="round"><div class="text-in-round">2<br>кг</div></div>
             </div>
             </a>
             <p class="question">слыш, пожалуйста <a href="#" class="giveMeYouMoney">купи</a></p>
@@ -42,6 +43,7 @@
                 <h3 class="food">с курицей</h3>
                 <p class="portions">10 порций <br>мыш в подарок</p>
                 <div class="img"></div>
+                <div class="round"><div class="text-in-round">5<br>кг</div></div>
             </div>
             </a>
             <p class="question">приносим изменения товар закончился<br>вы можете <a href="#" class="giveMeYouMoney">предзаказать нашу продукцию</a></p>
