--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="page">
         <h1 class="page-first-word">Ты сегодня покормил кота?</h1>
     <div class="allContent">
-        <div class="first_eat">
+        <div class="first_eat eat">
             <a href="#">
             <div class="content-1 content">
                 <p class="first_word">Сказочное заморское яство</p>
@@ -22,7 +22,7 @@
             </a>
             <p class="question">слыш <a href="#" class="giveMeYouMoney">купи</a></p>
         </div>
-        <div class="second_eat">
+        <div class="second_eat eat">
             <a href="#">
             <div class="content-2 content">
                 <p class="first_word">Сказочное заморское яство</p>
@@ -35,7 +35,7 @@
             </a>
             <p class="question">слыш, пожалуйста <a href="#" class="giveMeYouMoney">купи</a></p>
         </div>
-        <div class="third_eat">
+        <div class="third_eat eat">
             <a href="#">
             <div class="content-3 content">
                 <p class="first_word">Сказочное заморское яство</p>
