block is resistant to text overflow

--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
         <div class="first_eat eat">
             <a href="#">
             <div class="content-1 content">
-                <p class="first_word">Сказочное заморское яство</p>
-                <p class="name">Нямушка</p>
-                <h3 class="food">с фуа-гра</h3>
-                <p class="portions">10 порций <br>мыш в подарок</p>
-
+                <div class="text-content">
+                    <p class="first_word">Сказочное заморское яство</p>
+                    <p class="name">Нямушка</p>
+                    <h3 class="food">с фуа-гра</h3>
+                    <p class="portions">10 порций <br>мыш в подарок</p>
+                </div>
                 <div class="round"><div class="text-in-round">0,5<br>кг</div></div>
             </div>
             </a>
@@ -25,11 +26,12 @@
         <div class="second_eat eat">
             <a href="#">
             <div class="content-2 content">
-                <p class="first_word">Сказочное заморское яство</p>
-                <p class="name">Нямушка</p>
-                <h3 class="food">с рыбой</h3>
-                <p class="portions">40 порций <br>мыш дриссированная в подарок</p>
-
+                <div class="text-content">
+                    <p class="first_word">Сказочное заморское яство</p>
+                    <p class="name">Нямушка</p>
+                    <h3 class="food">с рыбой</h3>
+                    <p class="portions">40 порций <br>мыш дриссированная в подарок</p>
+                </div>
                 <div class="round"><div class="text-in-round">2<br>кг</div></div>
             </div>
             </a>
@@ -38,11 +40,12 @@
         <div class="third_eat eat">
             <a href="#">
             <div class="content-3 content">
-                <p class="first_word">Сказочное заморское яство</p>
-                <p class="name">Нямушка</p>
-                <h3 class="food">с курицей</h3>
-                <p class="portions">10 порций <br>мыш в подарок</p>
-
+                <div class="text-content">
+                    <p class="first_word">Сказочное заморское яство</p>
+                    <p class="name">Нямушка</p>
+                    <h3 class="food">с курицей</h3>
+                    <p class="portions">10 порций <br>мыш в подарок</p>
+                </div>
                 <div class="round"><div class="text-in-round">5<br>кг</div></div>
             </div>
             </a>
