--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <p class="first_word">Сказочное заморское яство</p>
                     <p class="name">Нямушка</p>
                     <h3 class="food">с фуа-гра</h3>
-                    <p class="portions">10 порций <br>мыш в подарок</p>
+                    <p class="portions1 portions">10 порций <br>мыш в подарок</p>
                 </div>
                 <div class="round"><div class="text-in-round">0,5<br>кг</div></div>
             </div>
@@ -30,7 +30,7 @@
                     <p class="first_word">Сказочное заморское яство</p>
                     <p class="name">Нямушка</p>
                     <h3 class="food">с рыбой</h3>
-                    <p class="portions">40 порций <br>мыш дриссированная в подарок</p>
+                    <p class="portions1 portions">40 порций <br>мыш дриссированная в подарок</p>
                 </div>
                 <div class="round"><div class="text-in-round">2<br>кг</div></div>
             </div>
