cat visible normal

--- a/index.html
+++ b/index.html
@@ -39,15 +39,17 @@
         </div>
         <div class="third_eat eat">
             <a href="#">
-            <div class="content-3 content">
-                <div class="text-content">
-                    <p class="first_word">Сказочное заморское яство</p>
-                    <p class="name">Нямушка</p>
-                    <h3 class="food">с курицей</h3>
-                    <p class="portions">10 порций <br>мыш в подарок</p>
+                <div class="third-background">
+                    <div class="content-3 content">
+                        <div class="text-content">
+                        <p class="first_word">Сказочное заморское яство</p>
+                        <p class="name">Нямушка</p>
+                        <h3 class="food">с курицей</h3>
+                        <p class="portions">10 порций <br>мыш в подарок<br>Заказчик ликует!</p>
+                    </div>
+                        <div class="round"><div class="text-in-round">5<br>кг</div></div>
+                    </div>
                 </div>
-                <div class="round"><div class="text-in-round">5<br>кг</div></div>
-            </div>
             </a>
             <p class="question">приносим изменения товар закончился<br>вы можете <a href="#" class="giveMeYouMoney">предзаказать нашу продукцию</a></p>
         </div>
