--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 </head>
 <body>
     <div class="page">
-        <h1 class="page-first-word">Ты сегодня покормил кота?</h1>
+        <h1 class="page-first-word">А ты сегодня покормил кота?</h1>
     <div class="allContent">
-        <div class="first_eat eat">
+        <div class="eat">
             <a href="#">
-            <div class="content-1 content">
+            <div class="content">
                 <div class="text-content">
-                    <p class="first_word">Сказочное заморское яство</p>
+                    <p class="first-word">Сказочное заморское яство</p>
                     <p class="name">Нямушка</p>
                     <h3 class="food">с фуа-гра</h3>
                     <p class="portions1 portions">10 порций <br>мыш в подарок</p>
@@ -23,11 +23,11 @@
             </a>
             <p class="question">слыш <a href="#" class="giveMeYouMoney">купи</a></p>
         </div>
-        <div class="second_eat eat">
+        <div class="eat">
             <a href="#">
-            <div class="content-2 content">
+            <div class="content">
                 <div class="text-content">
-                    <p class="first_word">Сказочное заморское яство</p>
+                    <p class="first-word">Сказочное заморское яство</p>
                     <p class="name">Нямушка</p>
                     <h3 class="food">с рыбой</h3>
                     <p class="portions1 portions">40 порций <br>мыш дриссированная в подарок</p>
@@ -40,9 +40,9 @@
         <div class="third_eat eat">
             <a href="#">
                 <div class="third-background">
-                    <div class="content-3 content">
+                    <div class="content-disabled content">
                         <div class="text-content">
-                        <p class="first_word">Сказочное заморское яство</p>
+                        <p class="first-word">Сказочное заморское яство</p>
                         <p class="name">Нямушка</p>
                         <h3 class="food">с курицей</h3>
                         <p class="portions">10 порций <br>мыш в подарок<br>Заказчик ликует!</p>
@@ -51,8 +51,76 @@
                     </div>
                 </div>
             </a>
-            <p class="question">приносим изменения товар закончился<br>вы можете <a href="#" class="giveMeYouMoney">предзаказать нашу продукцию</a></p>
+            <p class="question">приносим изменения товар закончился<br> вы можете <a href="#" class="giveMeYouMoney">предзаказать нашу продукцию</a></p>
         </div>
+        <div class="eat">
+            <a href="#">
+                <div class="content">
+                    <div class="text-content">
+                        <p class="first-word">Сказочное заморское яство</p>
+                        <p class="name">Нямушка</p>
+                        <h3 class="food">с фуа-гра</h3>
+                        <p class="portions1 portions">10 порций <br>мыш в подарок</p>
+                    </div>
+                    <div class="round"><div class="text-in-round">0,5<br>кг</div></div>
+                </div>
+            </a>
+            <p class="question">слыш <a href="#" class="giveMeYouMoney">купи</a></p>
+        </div>
+        <div class="eat">
+            <a href="#">
+                <div class="content">
+                    <div class="text-content">
+                        <p class="first-word">Сказочное заморское яство</p>
+                        <p class="name">Нямушка</p>
+                        <h3 class="food">с фуа-гра</h3>
+                        <p class="portions1 portions">10 порций <br>мыш в подарок</p>
+                    </div>
+                    <div class="round"><div class="text-in-round">0,5<br>кг</div></div>
+                </div>
+            </a>
+            <p class="question">слыш <a href="#" class="giveMeYouMoney">купи</a></p>
+        </div>
+        <div class="eat">
+            <a href="#">
+                <div class="content">
+                    <div class="text-content">
+                        <p class="first-word">Сказочное заморское яство</p>
+                        <p class="name">Нямушка</p>
+                        <h3 class="food">с фуа-гра</h3>
+                        <p class="portions1 portions">10 порций <br>мыш в подарок</p>
+                    </div>
+                    <div class="round"><div class="text-in-round">0,5<br>кг</div></div>
+                </div>
+            </a>
+            <p class="question">слыш <a href="#" class="giveMeYouMoney">купи</a></p>
+        </div><div class="eat">
+        <a href="#">
+            <div class="content">
+                <div class="text-content">
+                    <p class="first-word">Сказочное заморское яство</p>
+                    <p class="name">Нямушка</p>
+                    <h3 class="food">с фуа-гра</h3>
+                    <p class="portions1 portions">10 порций <br>мыш в подарок</p>
+                </div>
+                <div class="round"><div class="text-in-round">0,5<br>кг</div></div>
+            </div>
+        </a>
+        <p class="question">слыш <a href="#" class="giveMeYouMoney">купи</a></p>
+    </div><div class="eat">
+        <a href="#">
+            <div class="content">
+                <div class="text-content">
+                    <p class="first-word">Сказочное заморское яство</p>
+                    <p class="name">Нямушка</p>
+                    <h3 class="food">с фуа-гра</h3>
+                    <p class="portions1 portions">10 порций <br>мыш в подарок</p>
+                </div>
+                <div class="round"><div class="text-in-round">0,5<br>кг</div></div>
+            </div>
+        </a>
+        <p class="question">слыш <a href="#" class="giveMeYouMoney">купи</a></p>
+    </div>
     </div>
     </div>
 </body>
