fixed some bugs

--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
                     </div>
                 </div>
             </a>
-            <p class="question">приносим изменения товар закончился<br> вы можете <a href="#" class="giveMeYouMoney">предзаказать нашу продукцию</a></p>
+            <p class="question">приносим изменения товар закончился<br>
+            вы можете <a href="#" class="giveMeYouMoney">предзаказать нашу продукцию</a></p>
         </div>
         <div class="eat">
             <a href="#">
@@ -59,13 +60,13 @@
                     <div class="text-content">
                         <p class="first-word">Сказочное заморское яство</p>
                         <p class="name">Нямушка</p>
-                        <h3 class="food">с фуа-гра</h3>
-                        <p class="portions1 portions">10 порций <br>мыш в подарок</p>
+                        <h3 class="food">с киселём</h3>
+                        <p class="portions1 portions">7 порций <br>мыш в подарок</p>
                     </div>
-                    <div class="round"><div class="text-in-round">0,5<br>кг</div></div>
+                    <div class="round"><div class="text-in-round">0,7<br>кг</div></div>
                 </div>
             </a>
-            <p class="question">слыш <a href="#" class="giveMeYouMoney">купи</a></p>
+            <p class="question">можешь пж <a href="#" class="giveMeYouMoney">купить</a></p>
         </div>
         <div class="eat">
             <a href="#">
@@ -73,13 +74,13 @@
                     <div class="text-content">
                         <p class="first-word">Сказочное заморское яство</p>
                         <p class="name">Нямушка</p>
-                        <h3 class="food">с фуа-гра</h3>
-                        <p class="portions1 portions">10 порций <br>мыш в подарок</p>
+                        <h3 class="food">со вкусом безысходности</h3>
+                        <p class="portions1 portions">5 порций <br>мыш в подарок</p>
                     </div>
-                    <div class="round"><div class="text-in-round">0,5<br>кг</div></div>
+                    <div class="round"><div class="text-in-round">0,8<br>кг</div></div>
                 </div>
             </a>
-            <p class="question">слыш <a href="#" class="giveMeYouMoney">купи</a></p>
+            <p class="question">ну если хочешь то <a href="#" class="giveMeYouMoney">купи</a></p>
         </div>
         <div class="eat">
             <a href="#">
@@ -87,40 +88,56 @@
                     <div class="text-content">
                         <p class="first-word">Сказочное заморское яство</p>
                         <p class="name">Нямушка</p>
-                        <h3 class="food">с фуа-гра</h3>
-                        <p class="portions1 portions">10 порций <br>мыш в подарок</p>
+                        <h3 class="food">с вареньем</h3>
+                        <p class="portions1 portions">15 порций <br>мыш в подарок</p>
                     </div>
-                    <div class="round"><div class="text-in-round">0,5<br>кг</div></div>
+                    <div class="round"><div class="text-in-round">10<br>кг</div></div>
                 </div>
             </a>
-            <p class="question">слыш <a href="#" class="giveMeYouMoney">купи</a></p>
-        </div><div class="eat">
+            <p class="question">слипнется но все равно <a href="#" class="giveMeYouMoney">купи</a></p>
+        </div>
+        <div class="eat">
         <a href="#">
             <div class="content">
                 <div class="text-content">
                     <p class="first-word">Сказочное заморское яство</p>
                     <p class="name">Нямушка</p>
-                    <h3 class="food">с фуа-гра</h3>
-                    <p class="portions1 portions">10 порций <br>мыш в подарок</p>
+                    <h3 class="food">с коффе</h3>
+                    <p class="portions1 portions">5 порций <br>мыш в подарок</p>
                 </div>
-                <div class="round"><div class="text-in-round">0,5<br>кг</div></div>
+                <div class="round"><div class="text-in-round">1,5<br>кг</div></div>
             </div>
         </a>
-        <p class="question">слыш <a href="#" class="giveMeYouMoney">купи</a></p>
-    </div><div class="eat">
-        <a href="#">
-            <div class="content">
-                <div class="text-content">
-                    <p class="first-word">Сказочное заморское яство</p>
-                    <p class="name">Нямушка</p>
-                    <h3 class="food">с фуа-гра</h3>
-                    <p class="portions1 portions">10 порций <br>мыш в подарок</p>
-                </div>
-                <div class="round"><div class="text-in-round">0,5<br>кг</div></div>
-            </div>
-        </a>
-        <p class="question">слыш <a href="#" class="giveMeYouMoney">купи</a></p>
+        <p class="question">можешь сесть сам но сначала <a href="#" class="giveMeYouMoney">купи</a></p>
     </div>
+    <div class="eat">
+        <a href="#">
+            <div class="content">
+                <div class="text-content">
+                    <p class="first-word">Сказочное заморское яство</p>
+                    <p class="name">Нямушка</p>
+                    <h3 class="food">с алкоголем</h3>
+                    <p class="portions1 portions">2 порции <br>скидка на похмелье в подарок</p>
+                </div>
+                <div class="round"><div class="text-in-round">1<br>кг</div></div>
+            </div>
+        </a>
+        <p class="question">это вредно но <a href="#" class="giveMeYouMoney">купи</a></p>
+    </div>
+        <div class="eat">
+            <a href="#">
+                <div class="content">
+                    <div class="text-content">
+                        <p class="first-word">Сказочное заморское яство</p>
+                        <p class="name">Нямушка</p>
+                        <h3 class="food">с валерьянкой</h3>
+                        <p class="portions1 portions">3 порции <br>мыш вам уже не понадобится</p>
+                    </div>
+                    <div class="round"><div class="text-in-round">2<br>кг</div></div>
+                </div>
+            </a>
+            <p class="question">ХИТ ПОДАЖ! <a href="#" class="giveMeYouMoney">купи</a></p>
+        </div>
     </div>
     </div>
 </body>
