--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h1 class="page-first-word">А ты сегодня покормил кота?</h1>
     <div class="allContent">
         <div class="eat">
-            <a href="#">
+            <a>
             <div class="content">
                 <div class="text-content">
                     <p class="first-word">Сказочное заморское яство</p>
@@ -21,10 +21,10 @@
                 <div class="round"><div class="text-in-round">0,5<br>кг</div></div>
             </div>
             </a>
-            <p class="question">слыш <a href="#" class="giveMeYouMoney">купи</a></p>
+            <p class="question">слыш <a class="giveMeYouMoney">купи</a></p>
         </div>
         <div class="eat">
-            <a href="#">
+            <a>
             <div class="content">
                 <div class="text-content">
                     <p class="first-word">Сказочное заморское яство</p>
@@ -35,10 +35,10 @@
                 <div class="round"><div class="text-in-round">2<br>кг</div></div>
             </div>
             </a>
-            <p class="question">слыш, пожалуйста <a href="#" class="giveMeYouMoney">купи</a></p>
+            <p class="question">слыш, пожалуйста <a class="giveMeYouMoney">купи</a></p>
         </div>
         <div class="third_eat eat">
-            <a href="#">
+            <a>
                 <div class="third-background">
                     <div class="content-disabled content">
                         <div class="text-content">
@@ -55,7 +55,7 @@
             вы можете <a href="#" class="giveMeYouMoney">предзаказать нашу продукцию</a></p>
         </div>
         <div class="eat">
-            <a href="#">
+            <a>
                 <div class="content">
                     <div class="text-content">
                         <p class="first-word">Сказочное заморское яство</p>
@@ -66,10 +66,10 @@
                     <div class="round"><div class="text-in-round">0,7<br>кг</div></div>
                 </div>
             </a>
-            <p class="question">можешь пж <a href="#" class="giveMeYouMoney">купить</a></p>
+            <p class="question">можешь пж <a class="giveMeYouMoney">купить</a></p>
         </div>
         <div class="eat">
-            <a href="#">
+            <a>
                 <div class="content">
                     <div class="text-content">
                         <p class="first-word">Сказочное заморское яство</p>
@@ -80,10 +80,10 @@
                     <div class="round"><div class="text-in-round">0,8<br>кг</div></div>
                 </div>
             </a>
-            <p class="question">ну если хочешь то <a href="#" class="giveMeYouMoney">купи</a></p>
+            <p class="question">ну если хочешь то <a class="giveMeYouMoney">купи</a></p>
         </div>
         <div class="eat">
-            <a href="#">
+            <a>
                 <div class="content">
                     <div class="text-content">
                         <p class="first-word">Сказочное заморское яство</p>
@@ -94,10 +94,10 @@
                     <div class="round"><div class="text-in-round">10<br>кг</div></div>
                 </div>
             </a>
-            <p class="question">слипнется но все равно <a href="#" class="giveMeYouMoney">купи</a></p>
+            <p class="question">слипнется но все равно <a class="giveMeYouMoney">купи</a></p>
         </div>
         <div class="eat">
-        <a href="#">
+        <a>
             <div class="content">
                 <div class="text-content">
                     <p class="first-word">Сказочное заморское яство</p>
@@ -108,10 +108,10 @@
                 <div class="round"><div class="text-in-round">1,5<br>кг</div></div>
             </div>
         </a>
-        <p class="question">можешь сесть сам но сначала <a href="#" class="giveMeYouMoney">купи</a></p>
+        <p class="question">можешь сесть сам но сначала <a class="giveMeYouMoney">купи</a></p>
     </div>
     <div class="eat">
-        <a href="#">
+        <a>
             <div class="content">
                 <div class="text-content">
                     <p class="first-word">Сказочное заморское яство</p>
@@ -122,10 +122,10 @@
                 <div class="round"><div class="text-in-round">1<br>кг</div></div>
             </div>
         </a>
-        <p class="question">это вредно но <a href="#" class="giveMeYouMoney">купи</a></p>
+        <p class="question">это вредно но <a class="giveMeYouMoney">купи</a></p>
     </div>
         <div class="eat">
-            <a href="#">
+            <a>
                 <div class="content">
                     <div class="text-content">
                         <p class="first-word">Сказочное заморское яство</p>
@@ -136,7 +136,7 @@
                     <div class="round"><div class="text-in-round">2<br>кг</div></div>
                 </div>
             </a>
-            <p class="question">ХИТ ПОДАЖ! <a href="#" class="giveMeYouMoney">купи</a></p>
+            <p class="question">ХИТ ПОДАЖ! <a class="giveMeYouMoney">купи</a></p>
         </div>
     </div>
     </div>
