--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
 </head>
 <body>
         <h1 class="page-first-word">А ты сегодня покормил кота?</h1>
+  <div class="page">
+     <div class="left-column">
+         <div class="main-menu">
+            <a href="#"><div class="menu-content"><p>хит продаж</p></div></a>
+            <a href="#"><div class="menu-content"><p>не хит продаж</p></div></a>
+            <a href="#"><div class="menu-content"><p>проданное</p></div></a>
+             <a href="#"><div class="menu-content"><p>для буржуев</p></div></a>
+             <a href="#"><div class="menu-content"><p>для нищих</p></div></a>
+         </div>
+     </div>
     <div class="allContent">
         <div class="eat">
             <a>
@@ -108,8 +118,8 @@
             </div>
         </a>
         <p class="question">можешь сесть сам но сначала <a class="giveMeYouMoney">купи</a></p>
-    </div>
-    <div class="eat">
+        </div>
+        <div class="eat">
         <a>
             <div class="content">
                 <div class="text-content">
@@ -122,8 +132,8 @@
             </div>
         </a>
         <p class="question">это вредно но <a class="giveMeYouMoney">купи</a></p>
-    </div>
-    <div class="eat">
+        </div>
+        <div class="eat">
         <a>
             <div class="content">
                 <div class="text-content">
@@ -138,5 +148,6 @@
             <p class="question">ХИТ ПОДАЖ! <a class="giveMeYouMoney">купи</a></p>
         </div>
     </div>
+  </div>
 </body>
 </html>
