--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   <div class="page">
      <div class="left-column">
          <div class="main-menu">
-            <a href="#"><div class="menu-content"><p>хит продаж</p></div></a>
-            <a href="#"><div class="menu-content"><p>не хит продаж</p></div></a>
-            <a href="#"><div class="menu-content"><p>проданное</p></div></a>
-             <a href="#"><div class="menu-content"><p>для буржуев</p></div></a>
-             <a href="#"><div class="menu-content"><p>для нищих</p></div></a>
+             <a href="#"><div class="menu-content"><div class="border"><p class="menu-text">хит продаж</p></div></div></a>
+             <a href="#"><div class="menu-content"><div class="border"><p class="menu-text">не хит продаж</p></div></div></a>
+             <a href="#"><div class="menu-content"><div class="border"><p class="menu-text">проданное</p></div></div></a>
+             <a href="#"><div class="menu-content"><div class="border"><p class="menu-text">для буржуев</p></div></div></a>
+             <a href="#"><div class="menu-content"><div class="border"><p class="menu-text">для нищих</p></div></div></a>
          </div>
      </div>
     <div class="allContent">
